# csci499-capstone

./: .gitignore  CMakeLists.txt  README.md  hud.gd  icon.svg.import  main_menu.gd  main_menu.gd.uid  pause_controller.gd  pause_controller.gd.uid  pause_menu.gd  project.godot  settings_menu.gd
.github/workflows/: ci.yml
assets/images/: chomp_idle.png.import
scenes/: Fin.tscn  LevelSelect.tscn  Pause Menu.tscn  PlayerIntro.tscn  attack.tscn  audio_player.tscn  camera.tscn  canvas.tscn  character_body_2d.gd  character_body_2d.gd.uid  frog.tscn  ghost.tscn  gollux.tscn  gollux.tscn387830793.tmp  gollux.tscn398420892.tmp  h_box_container.gd  h_box_container.gd.uid  main.tscn  main_menu.tscn  menu.tscn  nyarla_idle.tscn  options.tscn  pause_menu.tscn  player.tscn  player.tscn4084003001.tmp  player_intro.gd.uid  test-level.tscn  test_bat.tscn  test_joey.tscn  test_joey.tscn1186874584.tmp
scenes/Components/: Coin.tscn  HeartPickup.tscn  TeleportDoor.tscn  clue_sign.gd  clue_sign.gd.uid  clue_sign.tscn  teleportDoor.gd  teleportDoor.gd.uid
scenes/bosses/: frog.tscn  gollux.tscn  hand.tscn  minotaur.tscn  shark.tscn
scripts/: DemoManager.gd  DemoManager.gd.uid  attack.gd  attack.gd.uid  camera.gd  camera.gd.uid  character_body_2d.gd  disappearing_platform.gd  disappearing_platform.gd.uid  image.gd  image.gd.uid  menu.gd  next_level.gd  next_level.gd.uid  player.gd  player.gd.uid  player_intro.gd
src/: main.cpp
test/: test_character_body_2d.gd  test_character_body_2d.gd.uid  test_player.gd  test_player.gd.uid
tests/: test_sanity.gd  test_sanity.gd.uid
(+1253 files in other folders)
